--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ multipledispatch==1.0.0
 numpy==2.3.2
 packaging==25.0
 pandas==2.3.1
+patsy==1.0.1
 pillow==11.3.0
 Pygments==2.19.2
 pymc==5.25.1
@@ -30,6 +31,7 @@ rich==14.1.0
 scipy==1.16.1
 setuptools==80.9.0
 six==1.17.0
+statsmodels==0.14.5
 threadpoolctl==3.6.0
 toolz==1.0.0
 typing_extensions==4.14.1
